@@ -64,7 +64,7 @@ AntennaDBEntry antennaDBEntries[] =	/* FIXME: add individual antennas of arrays?
 	{ "Katherine",      "KATH12M",  -4147354.6449,   4581542.3911,  -1573303.2196,  12.0 },
 	{ "Kitt Peak",      "KP-VLBA",  -1995678.8402,  -5037317.6968,   3357328.0251,  25.0 },
 	{ "Koganei",        "KOGANEI",  -3941937.3975,   3368150.8927,   3702235.2449,  0.0 },
-	{ "Kokee",          "KOKEE",    -5543837.7897,  -2054566.8097,   2387852.4958,  0.0 },
+	{ "Kokee",          "KOKEE",    -5543837.7897,  -2054566.8097,   2387852.4958,  20.0 },
 	{ "Kutunse",        "",          6346232.8,       -33799.5,       634818.7,     32.0 },  /* approximate coordinates */
 	{ "Kunming",        "KUNMING",  -1281152.8016,   5640864.4199,   2682653.5123,  40.0 },
 	{ "LMT",            "",          -768715.6320,  -5988507.0720,   2063354.8520,  50.0, 0, "NASL" },
